* render image at end of section title in corresponding toc entry (#1752)
* allow inline image to be enclosed in link macro (alt text was breaking parsing)
* allow theme to set font style of first line of abstract to normal
* resize admonition label to fit if height exceeds height of content box
* fix crash when underline style is used in Rouge theme

Compliance::

* drop support for versions of Asciidoctor < 2 (#1552)
* drop support for Ruby < 2.5 (which includes JRuby 9.1) (#1681)
* release lock on ttfunk version (1.6 produces slightly different output from 1.5 for certain missing glyphs)
* upgrade to Prawn 2.3.0 (which adds OTF font support)
* drop deprecated Pdf module alias in API (leaving only PDF)
* remove deprecated "ascii" fonts; only bundle the more complete "subset" fonts
* remove asciidoctor-pdf/converter and asciidoctor-pdf/version shim scripts; use asciidoctor/pdf/converter and asciidoctor/pdf/version instead

== 1.5.3 (2020-02-28) - @mojavelinux

Bug Fixes::

* do not hyphen a hyphen when hyphenation is enabled (#1562)
* fix crash when applying text transform to heading cell in table body (#1575)
* honor font style when looking for glyph in font
* only suggest installing prawn-gmagick gem if not loaded (#1578)

== 1.5.2 (2020-02-21) - @mojavelinux

Bug Fixes::

* fix crash if btn or kbd macro is used in section title (#1563)
* ensure background and admonition icon image files are closed after being read (#1566)
* ensure temporary images generated by running content are cleaned up (#1566)

== 1.5.1 (2020-02-16) - @mojavelinux

Enhancements::

* allow theme to control font color of first line of abstract

Bug Fixes::

* fix spacing after first line of indented paragraph (#1557)

== 1.5.0 (2020-02-11) - @mojavelinux

* support table with multiple head rows & decorate accordingly (#1539)
* draw background and border around entire delimited block with wrapped text that appears inside an AsciiDoc table cell (#820)